--- a/project/assets/css/main.css
+++ b/project/assets/css/main.css
@@ -3255,9 +3255,17 @@
 
 /* Footer */
 
+	.footer-img{
+		width: 200px;
+	}
+	.footer-text{
+		align-self: center;
+		font-size: 22px;
+		font-family: 'Noto Sans TC', sans-serif;
+	}
 	#footer {
 		background: #f0f0f0;
-		padding: 4em 0 6em 0;
+		padding: 4em 0 3em 0;
 		text-align: center;
 	}
 
@@ -3776,7 +3784,7 @@
 		/* Footer */
 
 			#footer {
-				padding: 4em 0;
+				padding: 1em 0;
 			}
 
 				#footer .copyright li {
