--- a/project/assets/css/main.css
+++ b/project/assets/css/main.css
@@ -2943,6 +2943,12 @@
 		z-index: 10000;
 	}
 
+		#header img {		/*新增Logo圖片大小*/
+			width:70px;
+			height:70px;
+			margin:0;
+		}
+
 		#header h1 {
 			color: inherit;
 			height: inherit;
@@ -3162,11 +3168,10 @@
 
 	#banner {
 		background-attachment: scroll,							fixed;
-		background-color: #666;
-		background-image: url("images/overlay.png"), url("../../images/banner.jpg");
+		background-image: url("/images/books.jpg");
 		background-position: top left,						center center;
-		background-repeat: repeat,							no-repeat;
-		background-size: auto,							cover;
+		background-repeat: no-repeat;
+		background-size: cover;
 		color: #fff;
 		padding: 12em 0 20em 0;
 		text-align: center;
@@ -3178,6 +3183,7 @@
 
 		#banner h2, #banner h3, #banner h4, #banner h5, #banner h6 {
 			color: #fff;
+			font-family: Microsoft JhengHei;
 		}
 
 		#banner h2 {
@@ -3185,44 +3191,29 @@
 			line-height: 1em;
 			margin: 0 0 0.5em 0;
 			padding: 0;
+			font-family: 'Microsoft JhengHei';
 		}
 
-		#banner p {
-			font-size: 1.25em;
-			margin-bottom: 1.75em;
+		.container1{
+			background: #ffffff;
+  			border: none;
+			float: left;
+			color: #000000;
+			padding-left: 45px;
+			-webkit-border-radius: 5px;
+			-moz-border-radius: 5px;
+			border-radius: 5px;
+			position: absolute;
+			left: 1130px;
 		}
-
-		#banner input[type="submit"],
-		#banner input[type="reset"],
-		#banner input[type="button"],
-		#banner .button {
-			background-color: transparent;
-			box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.5);
-			color: #fff;
-			min-width: 12em;
-		}
-
-			#banner input[type="submit"]:hover,
-			#banner input[type="reset"]:hover,
-			#banner input[type="button"]:hover,
-			#banner .button:hover {
-				background-color: rgba(255, 255, 255, 0.1);
-			}
-
-			#banner input[type="submit"]:active,
-			#banner input[type="reset"]:active,
-			#banner input[type="button"]:active,
-			#banner .button:active {
-				background-color: rgba(255, 255, 255, 0.2);
-			}
-
-			#banner input[type="submit"].primary,
-			#banner input[type="reset"].primary,
-			#banner input[type="button"].primary,
-			#banner .button.primary {
-				background: #fff;
-				color: #666 !important;
-			}
+		header.banner.container1.icon{
+			position: absolute;
+			top: 50%;
+			margin-left: 17px;
+			margin-top: 17px;
+			z-index: 1;
+			color: #000000;
+		  }
 
 /* Main */
 
