--- a/project/assets/css/main.css
+++ b/project/assets/css/main.css
@@ -3197,23 +3197,25 @@
 		.container1{
 			background: #ffffff;
   			border: none;
-			float: left;
+			border-radius: 5px;
+			  float: left;
 			color: #000000;
-			padding-left: 45px;
 			-webkit-border-radius: 5px;
 			-moz-border-radius: 5px;
-			border-radius: 5px;
 			position: absolute;
-			left: 1130px;
+			left: 50%;
+			top: 40%;
+			transform: translate(-50%, -50%);
+			margin-bottom: auto;
 		}
-		header.banner.container1.icon{
+		.search-icon{
 			position: absolute;
-			top: 50%;
-			margin-left: 17px;
-			margin-top: 17px;
+			top: 20%;
+			left: 5px;
 			z-index: 1;
 			color: #000000;
 		  }
+
 
 /* Main */
 
