--- a/project/assets/css/main.css
+++ b/project/assets/css/main.css
@@ -3063,6 +3063,7 @@
 			-webkit-animation: reveal-header 0.5s;
 			-ms-animation: reveal-header 0.5s;
 			animation: reveal-header 0.5s;
+			height: 70px;
 		}
 
 		#header.alt {
@@ -3168,7 +3169,7 @@
 
 	#banner {
 		background-attachment: scroll,							fixed;
-		background-image: url("/images/books.jpg");
+		background-image: url("../../images/books.jpg");
 		background-position: top left,						center center;
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -3816,7 +3817,7 @@
 			ul.actions {
 				margin: 0 0 2em 0;
 			}
-
+			
 				ul.actions li {
 					display: block;
 					padding: 1em 0 0 0;
@@ -3897,4 +3898,7 @@
 				padding: 2.5em 1em 3em 1em;
 			}
 
+	}
+	.header-ul{
+		margin-top: 10px;
 	}
